# naics_etl

./: .gitignore  README.md  load_naics_codes.py  load_naics_descriptions.py  load_naics_index.py  load_naics_industry_detail.py  logging_config.json  metadata.toml  preload_naics.py  pyproject.toml
naics/: __init__.py
