[tool.poetry]
name = "naics"
version = "0.1.0"
description = "Bringing in the NAICS codes from the official file."
authors = ["mikevatd3 <mike@datadrivendetroit.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.13"
polars = "^1.4.0"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.31"
tomli = "^2.0.1"
geopandas = "^1.0.1"
returns = "^0.23.0"
geoalchemy2 = "^0.15.2"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
tabulate = "^0.9.0"
dvc = "^3.56.0"
pandera = "^0.21.0"
loader = {git = "https://github.com/mikevatd3/loader.git"}
openpyxl = "^3.1.5"
pygit2 = "^1.16.0"
metadata-audit = {path = "../../tools/metadata_audit", develop = true}
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
